--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <div class="registerBox" style="display: none;">
+    <div class="registerBox" style="display: none;" id="register-box">
         <div class="registerTitle">
             Sign up
         </div>
@@ -73,7 +73,7 @@
             or
         </div>
         <div class="registerLoginDiv">
-            <button class="registerLoginBtn" id="log-in-redirect">login</button>
+            <button class="registerLoginBtn" id="log-in-redirect" onclick="showLoginBox()">login</button>
         </div>
     </div>
 
@@ -90,13 +90,13 @@
             <div class="loginSubtitle">
                 username
             </div>
-            <input class="registerInput" type="text" id="registerUsername" required minlength="none" maxlength="16">
+            <input class="registerInput" type="text" id="loginUsername" required minlength="none" maxlength="16">
             <br>
-            <div class="loginSubtitle">
+            <div class="loginSubtit le">
                 password
             </div>
             <div class="registerPassword">
-                <input class="loginInputPassword" type="password" id="registerPasswordLogin" required minlength="10"
+                <input class="loginInputPassword" type="password" id="loginPassword" required minlength="10"
                     maxlength="16">
                 <button class="viewBtn" id="viewPasswordLog" onclick="showPassLogin()">
                     <img src="assets/icons/view.png" alt="mostra password" id="viewBtnLogin" class="viewBtnImg">
@@ -113,7 +113,7 @@
             or
         </div>
         <div class="registerLoginDiv">
-            <button class="loginSignUpBtn" id="sign-up-redirect">sign up</button>
+            <button class="loginSignUpBtn" id="sign-up-redirect" onclick="showRegisterBox()">sign up</button>
         </div>
     </div>
 
