--- a/src/index.html
+++ b/src/index.html
@@ -53,11 +53,9 @@
                 </button>
             </div>
         </div>
-
         <div class="registerSubtitleCenter">
             immagine profilo
         </div>
-
         <div class="registerImg">
             <label for="accountImgUpload">
                 <img src="assets/icons/upload.png" class="uploadIcon">
@@ -66,7 +64,7 @@
         </div>
         <br>
         <div class="registerBtnDiv">
-            <button class="registerBtn" id="sign-up"> sign up </button>
+            <button class="registerBtn" id="sign-up" onclick="register()"> sign up </button>
         </div>
         <br>
         <div class="registerSubtitleCenter">
@@ -92,7 +90,7 @@
             </div>
             <input class="registerInput" type="text" id="loginUsername" required minlength="none" maxlength="16">
             <br>
-            <div class="loginSubtit le">
+            <div class="loginSubtitle">
                 password
             </div>
             <div class="registerPassword">
@@ -103,10 +101,9 @@
                 </button>
             </div>
         </div>
-
         <br>
         <div class="loginBtnDiv">
-            <button class="loginBtn" id="sign-up"> login </button>
+            <button class="loginBtn" id="sign-up" onclick="login()"> login </button>
         </div>
         <br>
         <div class="loginSubtitleCenter">
